# proton-directionality-BL4S

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
cfg/: marley_config.js  marley_config_supernova.js
src/: AnalysisManager.cpp  AnalysisManager.h  CMakeLists.txt  DetectorConstruction.cpp  DetectorConstruction.h  DetectorMessenger.cc  DetectorMessenger.hh  EventAction.cpp  MCTruthManager.cpp  MCTruthManager.h  PrimaryGeneration.cpp  PrimaryGeneration.h  RunAction.cpp  RunAction.h
test_code/: root_macro.c
